# pig-studio

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dioxus.toml  README.md  package.json
.agents/: pig-studio-v0.1-requirements.md
.agents/agents/: linus-code-reviewer.md  web-design-consultant.md
assets/styles/: app.css  generated.css
crates/app-core/: Cargo.toml
crates/app-core/src/: event_bus.rs  lib.rs  ports.rs
crates/app-core/src/use_cases/: create_project.rs  create_session.rs  manage_worktree.rs  mod.rs  reconcile_active_runs.rs  respond_approval.rs  resume_session.rs  send_prompt.rs  update_runtime_settings.rs
crates/app-core/tests/: manage_worktree.rs  use_cases.rs
crates/app-desktop/: Cargo.toml  build.rs
crates/app-desktop/src/: app.rs  bootstrap.rs  lib.rs  main.rs  state.rs
crates/app-desktop/tests/: bootstrap_smoke.rs  recovery_smoke.rs
crates/base-ui-dioxus/: Cargo.toml
crates/base-ui-dioxus/src/: lib.rs
crates/coss-ui-dioxus/: Cargo.toml
crates/coss-ui-dioxus/src/: lib.rs
crates/domain/: Cargo.toml
crates/domain/src/: approval.rs  lib.rs  project.rs  run.rs  runtime.rs  session.rs
crates/infra-pimono/: Cargo.toml
crates/infra-pimono/src/: adapter.rs  lib.rs  models.rs  process.rs  stream_parser.rs
crates/infra-pimono/tests/: stream_parser.rs
crates/infra-settings/: Cargo.toml
crates/infra-settings/src/: fs_service.rs  lib.rs  platform_service.rs  runtime_locator.rs  settings_store.rs  worktree_service.rs
crates/infra-settings/tests/: runtime_health.rs
crates/infra-sqlite/: Cargo.toml
crates/infra-sqlite/src/: db.rs  lib.rs  migrations.rs
crates/infra-sqlite/src/repositories/: approval_repository.rs  event_repository.rs  mod.rs  project_repository.rs  run_repository.rs  session_repository.rs
crates/infra-sqlite/tests/: sqlite_repositories.rs
crates/shared-kernel/: Cargo.toml
crates/shared-kernel/src/: clock.rs  error.rs  event.rs  id.rs  lib.rs
crates/ui-components/: Cargo.toml
crates/ui-components/src/: lib.rs  presenters.rs  theme.rs
crates/ui-components/src/components/: approval_panel.rs  composer.rs  event_timeline.rs  mod.rs  session_header.rs  settings_panel.rs  sidebar.rs
crates/ui-components/tests/: presenters.rs
docs/: TODO.md  architecture-v0.1.zh-CN.md  manual-qa-v0.1.zh-CN.md  prd-v0.1.md  prd-v0.1.zh-CN.md  tasks-v0.1.zh-CN.md
migrations/: 0001_init.sql
scripts/: verify-bundle.mjs
src/app/: globals.css
