[package]
name = "infra-sqlite"
version = "0.1.0"
edition = "2024"

[dependencies]
app-core = { path = "../app-core" }
chrono = { version = "0.4", features = ["serde"] }
domain = { path = "../domain" }
rusqlite = { version = "0.37", features = ["bundled"] }
serde_json = "1.0"
shared-kernel = { path = "../shared-kernel" }

[dev-dependencies]
tempfile = "3.23"
